--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_cadastrar_grupo">CadastrarGrupoActivity</string>
 </resources>
